--- a/app/views/spree/shared/_search.html.erb
+++ b/app/views/spree/shared/_search.html.erb
@@ -11,5 +11,5 @@
   <div class="form-group">
     <%= search_field_tag :keywords, params[:keywords], placeholder: Spree.t(:search), class: "form-control" %>
   </div>
-  <%= submit_tag Spree.t(:search), name: nil, class: "btn btn-success" %>
+  <%= submit_tag Spree.t(:search), name: nil, class: "btn btn-primary" %>
 <% end %>
