--- a/app/views/spree/admin/blog/new.html.slim
+++ b/app/views/spree/admin/blog/new.html.slim
@@ -1,1 +1,4 @@
-h3 here's the create path!
+.col-sm-12.blog-main
+	h1.text-center Create Blog
+	= render 'form', blog: @blog
+	/ = link_to 'Back', blogs_path, class: 'btn btn-sm btn-primary'
