update blog show link in admin blog index

--- a/app/views/spree/admin/blog/index.html.slim
+++ b/app/views/spree/admin/blog/index.html.slim
@@ -11,4 +11,4 @@ h3.text-center All Blogs
         / h6.card-subtitle.mb-2.text-muted Card subtitle
         p.card-text Body: #{b.body[0..229].gsub(/\s\w+\s*$/,'...')}
         a.card-link href="#" Edit Blog
-        a.card-link href="#" Show
+        a.card-link href="#{blog_path(b.id)}" Show
